ajit I pray this will satisfy you

--- a/Data/kriging.ipynb
+++ b/Data/kriging.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +99,12 @@
       "Nugget: 13.881621490664376 \n",
       "\n",
       "Calculating statistics on variogram model fit...\n",
+      "52.65327\n",
+      "52.3984\n",
+      "13.64705\n",
+      "13.22514\n",
+      "0.2548699999999968\n",
+      "0.42191000000000045\n",
       "Grid dimensions - Longitude: 100, Latitude: 60\n",
       "Executing Ordinary Kriging...\n",
       "\n"
@@ -149,8 +155,12 @@
     "\n",
     "def adjust_grid_to_be_quadratic(data, num_points):\n",
     "    # Calculate the range for latitude and longitude\n",
-    "    lat_range = data['lat'].max() - data['lat'].min()\n",
-    "    lng_range = data['lng'].max() - data['lng'].min()\n",
+    "    latmax = 52.77\n",
+    "    latmin = 52.27\n",
+    "    lngmax = 13.68\n",
+    "    lngmin = 13.18\n",
+    "    lat_range = latmax - latmin\n",
+    "    lng_range = lngmax - lngmin\n",
     "\n",
     "    # Find the aspect ratio\n",
     "    aspect_ratio = lng_range / lat_range\n",
@@ -164,8 +174,8 @@
     "        num_lng = int(num_points * aspect_ratio)\n",
     "\n",
     "    # Generate grid\n",
-    "    grid_lon = np.linspace(data['lng'].min(), data['lng'].max(), num_lng)\n",
-    "    grid_lat = np.linspace(data['lat'].min(), data['lat'].max(), num_lat)\n",
+    "    grid_lon = np.linspace(lngmax, lngmin, num_lng)\n",
+    "    grid_lat = np.linspace(latmax, latmin, num_lat)\n",
     "    \n",
     "    print(f\"Grid dimensions - Longitude: {num_lng}, Latitude: {num_lat}\")\n",
     "    \n",
